# human-sensing

./: .gitignore  CLM_framework.sln  CLM_framework_vs2012.sln  CMakeLists.txt  CMakeLists.txt.bak  README.md  README.md.bak  README_Face.md  README_Pose.md  index.html
.github/workflows/: triggering_code.yml
app/: CLM_SAM.xml  CLM_SAM.xml~  clmgaze.xml
app/CLM_Yarp/conf/: CLMYarp.ini  CLMYarp.ini~
app/CLM_Yarp/scripts/: CLM_Yarp.xml
app/templates/: clmgaze.xml  clmh.xml
doxygen/: generate.txt
doxygen/doc/html/: annotated.html  classes.html  classfaceLandmarks__IDLServer.html  dir_3bc3361f69963f22748dcfcee4261827.html  dir_4978bc968e5e64c031a255d2bb6a8bb6.html  dir_74f431be21e95aea051a17fab650864d.html  dir_7554150db6aca20d9781909d9b536e0f.html  dir_d9f82ecc1e02377f9bbcae5dc757c321.html  faceLandmarks_2src_2main_8cpp_source.html  faceLandmarks_8cpp_source.html  faceLandmarks_8h_source.html  faceLandmarks__IDLServer_8h_source.html  files.html  functions.html  functions_func.html  group__faceLandmarks.html  group__yarpOpenPose.html  hierarchy.html  index.html  menudata.js  modules.html  yarpOpenPose_2main_8cpp_source.html
doxygen/doc/html/search/: all_1.js  all_2.js  classes_0.js  functions_0.js  groups_0.js  groups_1.js  searchdata.js
doxygen/doc/latex/: annotated.tex  classfaceLandmarks__IDLServer.tex  group__faceLandmarks.tex  group__yarpOpenPose.tex  hierarchy.tex  modules.tex  refman.tex
doxygen/generated-from-xml/: faceLandmarks.dox  yarpOpenPose.dox
exe/CLM_Yarp/: SimpleCLMYarp.cpp
faceLandmarks/: CMakeLists.txt  faceLandmarks.thrift  faceLandmarks.xml
faceLandmarks/app/: CMakeLists.txt
faceLandmarks/app/conf/: faceLandmarks.ini
faceLandmarks/app/scripts/: faceLandmarks.template
faceLandmarks/idl_dox/: faceLandmarks_IDLServer.h
faceLandmarks/include/: faceLandmarks.h  faceLandmarks_IDL.h
faceLandmarks/src/: faceLandmarks.cpp  faceLandmarks_IDL.cpp  main.cpp
googleVisionAI/: CMakeLists.txt  README.md  googleVisionAI.thrift  googleVisionAI.xml  main.cpp
googleVisionAI/app/conf/: config.ini
googleVisionAI/app/scripts/: googleVisionAI.xml
googleVisionAI/cmake/: FindGOOGLEAPIS.cmake
lib/local/CLM/: CMakeLists.txt
lib/local/CLM/include/: CLM.h
lib/local/CLM/src/: CLM_utils.cpp  Patch_experts.cpp
lib/local/FaceAnalyser/: CMakeLists.txt
modules/CLMH/: CLMH.cpp  CMakeLists.txt
modules/CLM_Gaze/: CLMGaze.cpp  CMakeLists.txt  CMakeLists.txt~
modules/CLM_Yarp/: CLMYarp.cpp  CMakeLists.txt  CMakeLists.txt~
modules/SimpleCLM/: CMakeLists.txt  SimpleCLM.cpp
yarpOpenPose/: CMakeLists.txt  main.cpp  yarpOpenPose.xml
yarpOpenPose/app/: CMakeLists.txt
yarpOpenPose/app/conf/: yarpOpenPose.ini
yarpOpenPose/app/scripts/: yarpOpenPose.template
yarpOpenPose/cmake/: Findopenpose.cmake
yarpPose/: Dockerfile  download_models.sh  yarpMMPose.py  yarpPose.py
yarpPose/app/conf/: yarpPose.ini
yarpPose/app/scripts/: yarpPoseTest.xml
yarpPose/docker/: entrypoint.sh  start_docker.sh
yarpPose/tests/: unit.py
yarpRTMPose/: .gitignore  CMakeLists.txt  Dockerfile  README.md
yarpRTMPose/.devcontainer/: devcontainer.json
yarpRTMPose/app/conf/: grabber.ini  yarpRTMPose.ini
yarpRTMPose/app/scripts/: app_test_data_player.xml  app_test_video_grabber.xml  app_test_video_grabber_cpp.xml  copy_deployed_models.sh  deploy.sh  download_models.sh  grabber.xml
yarpRTMPose/data/: coco_to_op.json  coco_wholebody.json  op_not_in_coco.json
yarpRTMPose/docker/: build_docker.sh  entrypoint.sh  start_docker.sh
yarpRTMPose/playground/: yarpOpenPoseTargetTemplate.txt
yarpRTMPose/scripts/: run_test.sh
yarpRTMPose/src/c++/: CMakeLists.txt  main.cpp
yarpRTMPose/src/c++/include/: yarpRTMPose.h
yarpRTMPose/src/c++/src/: yarpRTMPose.cpp
yarpRTMPose/src/python/yarpRTMPose/: __main__.py  format_mapping.py  inference.py
yarpRTMPose/tests/: CMakeLists.txt  context.py  test_rtmpose.py
yarpRTMPose/tests/integration/: integration_test.sh
yarpRTMPose/tests/unit/c++/: CMakeLists.txt  process_image.cpp
yarpRTMPose/tests/unit/python/: test_rtmpose.py
yarpRTMPose/tools/: dataset_py_to_json.py
yarpRTMPose/yarpRTMPose/: __main__.py  yarpRTMPose.py
